syntax = "proto3";

package keyauth.tag;
option go_package = "github.com/infraboard/keyauth/pkg/tag";

import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";
import "github.com/infraboard/mcube/pb/page/page.proto";
import "pkg/tag/pb/enum.proto";

// CreateTagRequest todo
message CreateTagRequest {
    // tag生效范围
    ScopeType scope_type = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"scope_type"'}
        ];
    // tag属于哪个namespace
    string namespace = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"namespace"'}
        ];
    // 建名称
    string key_name = 3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"key_name" validate:"lte=200"'}
        ];
    // 建标识
    string key_label = 4[
        (google.protobuf.field_tag) = {struct_tag: 'json:"key_label"'}
        ];
    // 建描述
    string key_desc = 5[
        (google.protobuf.field_tag) = {struct_tag: 'json:"key_desc"'}
        ];
    // 值来源
    ValueFrom value_from = 6[
        (google.protobuf.field_tag) = {struct_tag: 'json:"value_from"'}
        ];
    // http 获取Tag 值的参数
    HTTPFromOption http_from_option = 7[
        (google.protobuf.field_tag) = {struct_tag: 'json:"http_from_option"'}
        ];
    // String 类型的值
    repeated ValueOption values = 8[
        (google.protobuf.field_tag) = {struct_tag: 'json:"values"'}
        ];
}

// QueryTagKeyRequest todo
message QueryTagKeyRequest {
    page.PageRequest page = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"page"'}
        ];
    // tag生效范围
    ScopeType scope_type = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"scope_type"'}
        ];
    // 关键字
    string keywords = 3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"keywords"'}
        ];
}

// QueryTagValueRequest todo
message QueryTagValueRequest {
    page.PageRequest page = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"page"'}
        ];
    // Tag Value ID
    string tag_id = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"tag_id"'}
        ];
}

// DeleteTagRequest todo
message DeleteTagRequest {
    // Tag Value ID
    string tag_id = 2[
    (google.protobuf.field_tag) = {struct_tag: 'json:"tag_id" validate:"lte=200"'}
    ]; 
}

message DescribeTagRequest {
    // Tag Value ID
    string tag_id = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"tag_id" validate:"lte=200"'}
        ]; 
}

// ValueOptions 值描述
message ValueOption {
    string Value = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"value" json:"value" validate:"lte=200"'}
        ];
    string Label = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"label" json:"label"'}
        ];
    string Desc = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"desc" json:"desc"'}
        ];
}

// HTTPFromOptions todo
message HTTPFromOption {
    string url = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"url" json:"url"'}
        ];
    map<string, string> headers = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"headers" json:"headers"'}
        ];
    string search_key = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"search_key" json:"search_key"'}
        ];
    string value_key = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"value_key" json:"value_key"'}
        ];
    string label_key = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"label_key" json:"label_key"'}
        ];
    string desc_key = 6[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"desc_key" json:"desc_key"'}
        ];
}